<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Palestras IME</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="activity_configuracoes">Configurações</string>
    <string name="activity_details">Detalhes da Palestra</string>
    
    <string name="pref_what_should_fetch_key">key_pref_what_should_fetch</string>
    <string name="pref_what_should_fetch_title">Canais desejados</string>
    
    <string name="key_fetch_dcc">key_fetch_dcc</string>
    <string name="title_fetch_dcc">DCC</string>
    <string name="key_fetch_map">key_fetch_map</string>
    <string name="title_fetch_map">MAP</string>
    <string name="key_fetch_mat">key_fetch_mat</string>
    <string name="title_fetch_mat">MAT</string>
    <string name="key_fetch_mae">key_fetch_mae</string>
    <string name="title_fetch_mae">MAE</string>
    
    <string name="registrar_calendario">Registrar no Calendário</string>
    <string name="seguir_link">Seguir Link</string>
    
    <string name="refresh">Refresh</string>
    <string name="update_status">Loading&#8230;</string>
    

</resources>